src/StartingamesSettings/StartingamesSettings.module.scss
@import "../variables.scss";

* {
    font-family: 'Nunito', sans-serif;
    color: $color2;
}



.bigMenu {
    width: 100%;
    height: 100%;
    overflow: auto;

    background-color: $color1;
}

.bigMenuTitle {
    display: flex;
    width: 100%;
    padding: 20px 0px;
}

.bigMenuTitle>div {
    margin: auto;
    font-size: 40px;
}

.bigMenuContent {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: stretch;
}

.bigMenuButton{
    padding: 15px 0px;

    width: 80%;
    cursor: pointer;

    background-color: $color1;
    border-radius: 30px;
    box-shadow: 1px 1px 15px $colorShadow;
    margin: auto;

    display:flex;
    flex-direction: column;
}

.bigMenuButton>.logo
{
    width: 25%;
    margin:auto;
}

.bigMenuButton>.title
{
    margin:auto;
    padding: 5px 0px;
    font-size: 4vh;
}

.bigMenuButton>.desc
{
    margin:auto;
    padding: 5px 0px;
    font-size: 2vh;
}

.bigMenuButton:hover {
    background:$color3;
    color:white;
}

.bigMenuButtonWrapper {
    padding: 10px 0px;
}

 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
    .bigMenuButtonWrapper{
        width: 100%;
    }
    .bigMenuTitle>div { font-size: 35px; }
 }

 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
    .bigMenuButtonWrapper{
        width: 75%;
    }
    .bigMenuTitle>div { font-size: 45px; }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
    .bigMenuButtonWrapper{
        width: 50%;
    }
    .bigMenuTitle>div { font-size: 55px; }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
    .bigMenuButtonWrapper{
        width: 33%;
    }
    .bigMenuTitle>div { font-size: 65px; }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
    .bigMenuTitle>div { font-size: 75px; }
    .bigMenuButtonWrapper{
        width: 33%;
    }
 }














.infoBar {
    display: flex;
    margin-bottom: 10px;
}

.infoBar>button {
    font-size: 30px;
    padding: 0 15px;
}

.infoBar>button :hover {
    opacity: 0.75;
}

.infoBar>div {
    display: flex;
    flex-direction: column;
}

.infoBarL1 {
    display: flex;
    font-size: 15px;
    cursor: pointer;
    z-index: 1;
}

.infoBarL1>div::after {
    content: " / ";
    cursor: default;
}

.infoBarL1>:nth-last-child(2):after {
    content: "";
}

.infoBarL1>:last-child { display: none; }


.infoBarL2 {
    display: flex;
    font-size: 30px;
    margin-top: -10px;
}

.infoBarL2>div {
    display: none;
}

.infoBarL2>:last-child { display: unset; }



/*
.infoBar>div>div {
    display: none;
    cursor: pointer;
}

.infoBar>div>div::after {
    content: " / ";
    cursor: default;
}

.infoBar>div>:last-child::after { content: ""; }

.infoBar>div>:last-child { display: unset; }
*/

/*
@media only screen and (min-width: 768px) {

    .infoBar>div>div {display: unset;}

    }*/


/*
.infoBarPath {
    display: none;
    cursor: pointer;
}
  
@media only screen and (min-width: 768px) {

.infoBarPath {display: unset;}
}
*/

.main {
    display: flex;
}

.menu {
    display: none;
    flex-direction: column;
    background: $color1;
    width: 15vw;
    height: auto;
    padding: 10vh 0;
}

@media only screen and (min-width: 768px) {
    /* For desktop: */
    .menu {display: flex;}
    }

    /*
.menu-menu>div {
    margin: auto 0;
    overflow-x: auto;
}

.menu-menu-el {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin: 2vh 0vh;
    font-size: 1.4vw;
    min-height: 7vh;
    background: $colorext1;
}

.menu-menu-el>div {
    margin: auto 0;
    padding: 0 0.5vw;
}

.menu-menu-el.selected {
    background: rgba($colorext1, .25);
}

.menu-menu-el:hover {
    background: rgba($colorext1, .75);
    cursor: pointer;
}

.menu-menu-el.selected:hover {
    background: rgba($colorext1, .25);
    cursor: pointer;
}








.menu-name {
    width: 100%;
    height: 10vh;
    font-size: 6vmin;
}

.menu-title {
    height: 5vh;
    font-size: 3vmin;
    background: $color4;
    color: $colorext2;
    padding-left: 0.5vw;
}

*/



.page {
    flex-grow: 1;
    background: $colorext2;
    
    height: 95vh;
    padding: 2vmin;
}

.pageContent {
    height: 100%;
    overflow: auto;
}

.button-icon {
    background: $color2;
    padding: 0 0.75vw;
    height: 100%;
}

.button-icon:hover {
    background: rgba($color2, .75);
    cursor: pointer;
}








.separator {
    border-bottom: white solid 2px;
    margin: 10px;
}

.link {
    display: flex;
    cursor: pointer;
    border: white solid 1px;
    padding: 5px;
    border-radius: 5px;
}

.link>p {
    flex-grow: 1;
    width: auto;
    margin: auto;
}

.switch {
    display: flex;
    border: white solid 1px;
    padding: 5px;
    border-radius: 5px;
}

.switch>p {
    flex-grow: 1;
    width: auto;
    margin: auto;
}

/* The switch - the box around the slider */
.button {
    position: relative;
    display: flex;
    width: 60px;
    height: 34px;
  }
  
  /* Hide default HTML checkbox */
  .button input {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  /* The slider */
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  input:checked + .slider {
    background-color: #2196F3;
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px #2196F3;
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }

